fixing bug with footer overlaping gird

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,11 +150,12 @@ h1 {
 footer {
   background-color: var(--main-color);
   width: 100%;
-  position: fixed;
+  position:sticky;
   left: 0;
   bottom: 0;
   color: white;
   text-align: center;
+  font-size: 16px;
 }
 
 .lostpage-image {
